--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<div class="row justify-content-center mb-5 pb-2">
           			<div class="col-md-12 text-center heading-section ftco-animate">
 						<div class="img align-self-stretch">
-							<img src="images/logo_drtools.png" width="400">
+							<img src="images/logo_drtools.png" width="50%">
 						</div> 
 					
 						<h2 class="mb-4">Metric Visualization</h2>
