update visualization metric version, including new URL

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <div class="col-md-12 text-center">
 			<ul class="ftco-footer-social list-unstyled mt-5">
 				<li class="ftco-animate"><a href="https://www.github.com/guilhermeslacerda/drtools/" target="_blank"><span class="icon-github"></span></a></li>
-				<li class="ftco-animate"><a href="https://drtools.dev" target="_blank"><span class="icon-home"></span></a></li>
+				<li class="ftco-animate"><a href="http://drtools.site" target="_blank"><span class="icon-home"></span></a></li>
 			</ul>
 				
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
