including FAN-IN metric and paper reference

--- a/drtools-thresholds.html
+++ b/drtools-thresholds.html
@@ -148,9 +148,14 @@
             </tr>
             <tr>
             <th scope="row">I-DEP</th>
-            <td>Number of internal types/classes dependencies</td>
+            <td>Number of other internal types/classes dependencies referenced by a type (Fan-Out)</td>
             <td>Bad: &gt; 15</td>
             </tr>
+            <tr>
+            <th scope="row">FAN-IN</th>
+            <td>number of other types that reference a type</td>
+            <td>Bad: &gt; 10</td>
+            </tr>    
             <tr>
             <th scope="row">NPM</th>
             <td>Number of Public Methods</td>
@@ -313,6 +318,13 @@
                     Master's Dissertation, UFMG, 2015
             </td>    
             </tr>
+            <tr>
+            <td>di Biase, M., Rastogi, A., Bruntink, M., & van Deursen, A. The Delta Maintainability Model:
+                Measuring Maintainability of Fine-Grained Code Changes. In TechDebt 2019 - International Conference on
+                Technical Debt, 2019
+            </td>    
+            </tr>
+    
             <tr>
             <td>checkstyle - Size Violations. <a href="https://checkstyle.sourceforge.io/config_sizes.html" target="_blank">https://checkstyle.sourceforge.io/config_sizes.html</a>, 2019
             </td>    
