--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 		            </div>
 		          </div>
 	          </div>
-					</div>
-				</div>
+			</div>
+			</div>
 			</div>
 		</section>
 
@@ -121,11 +121,20 @@
     								<div class="icon">
     									<span class="flaticon-stethoscope"></span>
     								</div>
-    								<h3><a href="drtools-namespace-coupling.html">Namespace Coupling</a></h3>
-    								<p>Using CA and CE</p>
+									<h3><a href="drtools-type-coupling1.html">Type Coupling</a></h3>
+    								<p>Coupling between types (input/output)</p>
     							</div>
     						</div>
-    					</div>
+    						<div class="department-wrap p-4 ftco-animate">
+									<div class="text p-2 text-center">
+										<div class="icon">
+											<span class="flaticon-stethoscope"></span>
+										</div>
+										<h3><a href="drtools-type-coupling2.html">Type Coupling</a></h3>
+										<p>Using DEP, I-DEP, FAN-IN, and FAN-OUT</p>
+									</div>
+							</div>	
+						</div>
 
     					<div class="col-md-4">
     						<div class="department-wrap p-4 ftco-animate">
@@ -143,7 +152,7 @@
     									<span class="flaticon-stethoscope"></span>
     								</div>
     								<h3><a href="drtools-internal-dependencies.html">Internal Dependencies</a></h3>
-    								<p>Internal dependencies of types/classes</p>
+    								<p>Internal dependencies of types</p>
     							</div>
     						</div>
     						<div class="department-wrap p-4 ftco-animate">
@@ -155,7 +164,16 @@
     								<p>Using I, A, and D</p>
     							</div>
     						</div>
-    					</div>
+    						<div class="department-wrap p-4 ftco-animate">
+									<div class="text p-2 text-center">
+										<div class="icon">
+											<span class="flaticon-stethoscope"></span>
+										</div>
+										<h3><a href="drtools-cyclic-dependencies.html">Cyclic Dependencies</a></h3>
+										<p>Cyclic dependencies between types</p>
+									</div>
+							</div>	
+						</div>
 
     					<div class="col-md-4">
     						<div class="department-wrap p-4 ftco-animate">
@@ -172,8 +190,8 @@
     								<div class="icon">
     									<span class="flaticon-stethoscope"></span>
     								</div>
-    								<h3><a href="drtools-coupling.html">Type Coupling</a></h3>
-    								<p>Coupling between types/classes (input/output)</p>
+    								<h3><a href="drtools-namespace-coupling.html">Namespace Coupling</a></h3>
+    								<p>Using CA and CE</p>
     							</div>
     						</div>
     						<div class="department-wrap p-4 ftco-animate">
@@ -184,7 +202,7 @@
 									<h3><a href="drtools-instability-abstractness.html">Instability and Abstractness</a></h3>
 									<p>Using I and A</p>
 								</div>
-						</div>
+							</div>
 						</div>
     				</div>
     			</div>
