--- a/drtools-internal-dependencies.html
+++ b/drtools-internal-dependencies.html
@@ -44,6 +44,9 @@
         <div class="nav-item text-center cta mr-md-2">
             <a href="index.html" class="nav-link"><span>Back</span></a>
         </div>
+        <div class="text">
+            <strong class="text-error"><div id="errorMessage"></div></strong>
+        </div>			        
     </section>
 
 <script src="js/jquery-migrate-3.0.1.min.js"></script>
@@ -63,93 +66,97 @@
     <div class="container font_chord">
 
 <script type="text/javascript">
-  
-var r1 = 940 / 2,
+if (!optionsProject.datasetInternalDependencies || 0 === optionsProject.datasetInternalDependencies.length === '') {
+  $("#errorMessage").text(errorMessage.msgInternalDependencies)
+}
+else {
+
+    var r1 = 940 / 2,
     r0 = r1 - 180;
 
-var fill = d3.scale.category20c();
+    var fill = d3.scale.category20c();
 
-var chord = d3.layout.chord()
-    .padding(.04)
-    .sortSubgroups(d3.descending)
-    .sortChords(d3.descending);
+    var chord = d3.layout.chord()
+        .padding(.04)
+        .sortSubgroups(d3.descending)
+        .sortChords(d3.descending);
 
-var arc = d3.svg.arc()
-    .innerRadius(r0)
-    .outerRadius(r0 + 20);
+    var arc = d3.svg.arc()
+        .innerRadius(r0)
+        .outerRadius(r0 + 20);
 
-var svg = d3.select("body").append("svg:svg")
-    .attr("width", r1 * 2)
-    .attr("height", r1 * 2)
-    .attr("font-size", 11)
-    .attr("font-family", "Poppins")
-    .append("svg:g")
-    .attr("transform", "translate(" + r1 + "," + r1 + ")");
+    var svg = d3.select("body").append("svg:svg")
+        .attr("width", r1 * 2)
+        .attr("height", r1 * 2)
+        .attr("font-size", 11)
+        .attr("font-family", "Poppins")
+        .append("svg:g")
+        .attr("transform", "translate(" + r1 + "," + r1 + ")");
 
-d3.json(optionsProject.datasetInternalDependencies, function(imports) {
-  var indexByName = {},
-      nameByIndex = {},
-      matrix = [],
-      n = 0;
+    d3.json(optionsProject.datasetInternalDependencies, function(imports) {
+      var indexByName = {},
+          nameByIndex = {},
+          matrix = [],
+          n = 0;
 
-  function name(name) {
-    return name.substring(name.lastIndexOf(".")+1);
-  }
+      function name(name) {
+        return name.substring(name.lastIndexOf(".")+1);
+      }
 
-  imports.forEach(function(d) {
-    d = name(d.type);
-    if (!(d in indexByName)) {
-      nameByIndex[n] = d;
-      indexByName[d] = n++;
-    }
-  });
+      imports.forEach(function(d) {
+        d = name(d.type);
+        if (!(d in indexByName)) {
+          nameByIndex[n] = d;
+          indexByName[d] = n++;
+        }
+      });
 
-  imports.forEach(function(d) {
-    var source = indexByName[name(d.type)],
-        row = matrix[source];
-    if (!row) {
-     row = matrix[source] = [];
-     for (var i = -1; ++i < n;) row[i] = 0;
-    }
-    d.dependencies.forEach(function(d) { row[indexByName[name(d)]]++; });
-  });
+      imports.forEach(function(d) {
+        var source = indexByName[name(d.type)],
+            row = matrix[source];
+        if (!row) {
+        row = matrix[source] = [];
+        for (var i = -1; ++i < n;) row[i] = 0;
+        }
+        d.dependencies.forEach(function(d) { row[indexByName[name(d)]]++; });
+      });
 
-  chord.matrix(matrix);
+      chord.matrix(matrix);
 
-  var g = svg.selectAll("g.group")
-      .data(chord.groups)
-    .enter().append("svg:g")
-      .attr("class", "group");
+      var g = svg.selectAll("g.group")
+          .data(chord.groups)
+        .enter().append("svg:g")
+          .attr("class", "group");
 
-  g.append("svg:path")
-      .style("fill", function(d) { return fill(d.index); })
-      .style("stroke", function(d) { return fill(d.index); })
-      .attr("d", arc);
+      g.append("svg:path")
+          .style("fill", function(d) { return fill(d.index); })
+          .style("stroke", function(d) { return fill(d.index); })
+          .attr("d", arc);
 
-  g.append("svg:text")
-      .each(function(d) { d.angle = (d.startAngle + d.endAngle) / 2; })
-      .attr("dy", ".35em")
-      .attr("text-anchor", function(d) { return d.angle > Math.PI ? "end" : null; })
-      .attr("transform", function(d) {
-        return "rotate(" + (d.angle * 180 / Math.PI - 90) + ")"
-            + "translate(" + (r0 + 26) + ")"
-            + (d.angle > Math.PI ? "rotate(180)" : "");
-      })
-      .text(function(d) { return nameByIndex[d.index]; });
+      g.append("svg:text")
+          .each(function(d) { d.angle = (d.startAngle + d.endAngle) / 2; })
+          .attr("dy", ".35em")
+          .attr("text-anchor", function(d) { return d.angle > Math.PI ? "end" : null; })
+          .attr("transform", function(d) {
+            return "rotate(" + (d.angle * 180 / Math.PI - 90) + ")"
+                + "translate(" + (r0 + 26) + ")"
+                + (d.angle > Math.PI ? "rotate(180)" : "");
+          })
+          .text(function(d) { return nameByIndex[d.index]; });
 
-  svg.selectAll("path.chord")
-      .data(chord.chords)
-    .enter().append("svg:path")
-      .attr("class", "chord")
-      .style("stroke", function(d) { return d3.rgb(fill(d.source.index)).darker(); })
-      .style("fill", function(d) { return fill(d.source.index); })
-      .attr("d", d3.svg.chord().radius(r0));
+      svg.selectAll("path.chord")
+          .data(chord.chords)
+        .enter().append("svg:path")
+          .attr("class", "chord")
+          .style("stroke", function(d) { return d3.rgb(fill(d.source.index)).darker(); })
+          .style("fill", function(d) { return fill(d.source.index); })
+          .attr("d", d3.svg.chord().radius(r0));
 
 
-});
+    });
 
-d3.select(self.frameElement).style("height", "1200px").style("width", "1600px");
-
+    d3.select(self.frameElement).style("height", "1200px").style("width", "1600px");
+}
 </script>
 </div>
 </section>
