add code resonance and project files

--- a/drtools-thresholds.html
+++ b/drtools-thresholds.html
@@ -144,7 +144,7 @@
             <tr>
             <th scope="row">WMC</th>
             <td>Weighted Methods per Class</td>
-            <td>Good: &lt;= 11; Regular: between 11 and 34; Bad: &gt; 34</td>
+            <td>Good: &lt;= 20; Regular: between 20 and 100; Bad: &gt; 100</td>
             </tr>
             <tr>
             <th scope="row">DEP</th>
@@ -347,6 +347,13 @@
             </td>
             </tr>
             <tr>
+            <td>
+                Rangasamy, R.Selvarani & Nair, T.R. & Ramachandran, Muthu & Prasad, Kamakshi.
+                Software Metrics Evaluation Based on Entropy. Handbook of Research on Software 
+                Engineering and Productivity Technologies: Implications of Globalization, 2010 
+            </td>    
+            </tr>
+            <tr>
             <td>Robert C. Martin and Micah Martin. 2006. Agile Principles, Patterns, and Practices in C# (Robert C. Martin). 
                 Prentice Hall PTR, Upper Saddle River, NJ, USA
             </td>    
@@ -376,7 +383,7 @@
             </tr>        
 
             <tr>
-            <td>checkstyle - Size Violations. <a href="https://checkstyle.sourceforge.io/config_sizes.html" target="_blank">https://checkstyle.sourceforge.io/config_sizes.html</a>, 2019
+            <td>Checkstyle - Size Violations. <a href="https://checkstyle.sourceforge.io/config_sizes.html" target="_blank">https://checkstyle.sourceforge.io/config_sizes.html</a>, 2019
             </td>    
             </tr>
         </tbody>
