--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
     								<div class="icon">
     									<span class="flaticon-stethoscope"></span>
     								</div>
-    								<h3><a href="drtools-method.html">Methods</a></h3>
-    								<p>Using CYCLO, MLOC, and CALLS</p>
+									<h3><a href="drtools-type.html">Types</a></h3>
+    								<p>Using SLOC, NOM, DEP, and WMC</p>
     							</div>
     						</div>
-    						<div class="department-wrap p-4 ftco-animate">
+							<div class="department-wrap p-4 ftco-animate">
     							<div class="text p-2 text-center">
     								<div class="icon">
     									<span class="flaticon-stethoscope"></span>
@@ -138,21 +138,21 @@
 
     					<div class="col-md-4">
     						<div class="department-wrap p-4 ftco-animate">
-    							<div class="text p-2 text-center">
-    								<div class="icon">
-    									<span class="flaticon-stethoscope"></span>
-    								</div>
-    								<h3><a href="drtools-namespaces.html">Namespaces</a></h3>
-    								<p>Using NOC and NAC</p>
-    							</div>
-    						</div>
+								<div class="text p-2 text-center">
+									<div class="icon">
+										<span class="flaticon-stethoscope"></span>
+									</div>
+									<h3><a href="drtools-resonance.html">Code Resonance</a></h3>
+									<p>Using SLOC and WMC</p>
+								</div>
+							</div>
     						<div class="department-wrap p-4 ftco-animate">
     							<div class="text p-2 text-center">
     								<div class="icon">
     									<span class="flaticon-stethoscope"></span>
     								</div>
-    								<h3><a href="drtools-internal-dependencies.html">Internal Dependencies</a></h3>
-    								<p>Internal dependencies of types</p>
+    								<h3><a href="drtools-method.html">Methods</a></h3>
+    								<p>Using CYCLO, MLOC, and CALLS</p>
     							</div>
     						</div>
     						<div class="department-wrap p-4 ftco-animate">
@@ -176,13 +176,13 @@
 						</div>
 
     					<div class="col-md-4">
-    						<div class="department-wrap p-4 ftco-animate">
+							<div class="department-wrap p-4 ftco-animate">
     							<div class="text p-2 text-center">
     								<div class="icon">
     									<span class="flaticon-stethoscope"></span>
     								</div>
-    								<h3><a href="drtools-type.html">Types</a></h3>
-    								<p>Using NOM, SLOC, and WMC</p>
+    								<h3><a href="drtools-namespaces.html">Namespaces</a></h3>
+    								<p>Using NOC and NAC</p>
     							</div>
     						</div>
     						<div class="department-wrap p-4 ftco-animate">
@@ -203,6 +203,15 @@
 									<p>Using I and A</p>
 								</div>
 							</div>
+							<div class="department-wrap p-4 ftco-animate">
+    							<div class="text p-2 text-center">
+    								<div class="icon">
+    									<span class="flaticon-stethoscope"></span>
+    								</div>
+    								<h3><a href="drtools-internal-dependencies.html">Internal Dependencies</a></h3>
+    								<p>Internal dependencies of types</p>
+    							</div>
+    						</div>
 						</div>
     				</div>
     			</div>
