--- a/drtools-resonance.html
+++ b/drtools-resonance.html
@@ -72,7 +72,12 @@
 		</div>		
 		<div class="text">
 			<strong class="text-error"><div id="errorMessage"></div></strong>
-		</div>			
+        </div>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="textNamespaces" 
+                            onclick="changeTextNames();">
+            <label class="form-check-label" for="textNamespaces">Disable name of namespaces/types</label>
+        </div>						
 	</section>
 
 	<script src="js/jquery-migrate-3.0.1.min.js"></script>
@@ -168,6 +173,23 @@
             circle.attr("r", function(d) { return d.r * k; });
         }
         });
+        
+        function changeTextNames() {
+            if (document.getElementById('textNamespaces').checked)
+                disableNames();
+            else ableNames();
+        }
+
+        function disableNames() {
+            //svg.selectAll("text").remove();
+            svg.selectAll("text").style("opacity", 0);
+        }
+
+        function ableNames() {
+            //svg.selectAll("text").remove();
+            svg.selectAll("text").style("opacity", 1);
+        }
+
     }    
     </script>
 </body>
