including namespace filters

--- a/drtools-namespaces.html
+++ b/drtools-namespaces.html
@@ -35,7 +35,7 @@
       }
     </style>
 </head>
-<body>
+<body class="text-center">
   <section class="ftco-section" id="header-section">
     <div class="col-md-12 text-center heading-section ftco-animate">
       <h2 class="mb-4"><script>document.write(graphTitles.titleNamespace)</script></h2>
@@ -49,7 +49,16 @@
     </div>
 		<div class="text">
         <strong class="text-error"><div id="errorMessage"></div></strong>
-    </div>			  
+    </div>
+    <div class="text">
+      <label class="mr-sm-2" for="limitRegisters">Namespaces</label>
+      <select class="form-select" id="limitRegisters">
+        <option value="0" selected>All Namespaces</option>
+        <option value="11">Top 10</option>
+        <option value="31">Top 30</option>
+        <option value="61">Top 60</option>
+      </select>
+    </div>      
   </section>
 
 <script src="js/jquery-migrate-3.0.1.min.js"></script>
@@ -74,7 +83,8 @@ else {
 
   function drawBar() {
   $.get(optionsProject.datasetNamespaces, function(csvString) {
-        var arrayData = $.csv.toArrays(csvString, {onParseValue: $.csv.hooks.castToScalar});
+        var arrayAllData = $.csv.toArrays(csvString, {onParseValue: $.csv.hooks.castToScalar});
+        var arrayData = arrayAllData;
         var data = new google.visualization.arrayToDataTable(arrayData);
 
         var options = {
@@ -87,8 +97,19 @@ else {
         var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
 
         chart.draw(data, options);
+        $(function(){
+          $("#limitRegisters").change(function(){
+              var status = this.value;
+              if (status > 0 && arrayAllData.length >= status)
+                arrayData = arrayAllData.slice(0, status);
+              else arrayData = arrayAllData;
+                
+                data = new google.visualization.arrayToDataTable(arrayData);
+                dataView = new google.visualization.DataView(data);
+                chart.draw(dataView, options);
+          });
       });
-
+    }); 
   }   
   google.charts.setOnLoadCallback(drawBar);
 }
