--- a/drtools-method.html
+++ b/drtools-method.html
@@ -35,7 +35,7 @@
       }
     </style>
 </head>
-<body>
+<body class="text-center">
   <section class="ftco-section" id="header-section">
     <div class="col-md-12 text-center heading-section ftco-animate">
       <h2 class="mb-4"><script>document.write(graphTitles.titleMethod)</script></h2>
@@ -49,7 +49,16 @@
     </div>
     <div class="text">
         <strong class="text-error"><div id="errorMessage"></div></strong>
-    </div>			    
+    </div>
+    <div class="text">
+      <label class="mr-sm-2" for="limitRegisters">Methods</label>
+      <select class="form-select" id="limitRegisters">
+        <option value="0" selected>All methods</option>
+        <option value="11">Top 10</option>
+        <option value="51">Top 50</option>
+        <option value="101">Top 100</option>
+      </select>
+    </div>      
   </section>
 
 <script src="js/jquery-migrate-3.0.1.min.js"></script>
@@ -76,7 +85,8 @@ else {
 
   function drawVisualization() {
    $.get(optionsProject.datasetMethods, function(csvString) {
-      var arrayData = $.csv.toArrays(csvString, {onParseValue: $.csv.hooks.castToScalar});
+      var arrayAllData = $.csv.toArrays(csvString, {onParseValue: $.csv.hooks.castToScalar});
+      var arrayData = arrayAllData;
       var data = new google.visualization.arrayToDataTable(arrayData);
       var options = {
           hAxis: {
@@ -96,8 +106,19 @@ else {
 
         var chart = new google.visualization.BubbleChart(document.getElementById('series_chart_div'));
         chart.draw(data, options);
+        $(function(){
+          $("#limitRegisters").change(function(){
+              var status = this.value;
+              if (status > 0 && arrayAllData.length >= status)
+                arrayData = arrayAllData.slice(0, status);
+              else arrayData = arrayAllData;
+                
+                data = new google.visualization.arrayToDataTable(arrayData);
+                dataView = new google.visualization.DataView(data);
+                chart.draw(dataView, options);
+          });
+        });
    });    
-
   }
 
   google.setOnLoadCallback(drawVisualization);
